force-app/main/default/objects/eCard_Bus_Shortage__x/eCard_Bus_Shortage__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_bus_shortage</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_bus_shortage</externalName>
    <label>eCard_Bus_Shortage</label>
    <pluralLabel>eCard_Bus_Shortage</pluralLabel>
</CustomObject>