force-app/main/default/objects/eCard_Bus_Shortage__x/fields/actual_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>actual_delivery_date__c</fullName>
    <description>actual_delivery_date</description>
    <externalDeveloperName>actual_delivery_date</externalDeveloperName>
    <label>actual_delivery_date</label>
    <type>Date</type>
</CustomField>