force-app/main/default/objects/eCard_Bus_Shortage__x/fields/buildstation__c.field-meta.xml
<CustomField>
    <fullName>buildstation__c</fullName>
    <description>buildstation</description>
    <externalDeveloperName>buildstation</externalDeveloperName>
    <label>buildstation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>