force-app/main/default/objects/eCard_Bus_Shortage__x/fields/buyer__c.field-meta.xml
<CustomField>
    <fullName>buyer__c</fullName>
    <description>buyer</description>
    <externalDeveloperName>buyer</externalDeveloperName>
    <label>buyer</label>
    <length>254</length>
    <type>Text</type>
</CustomField>