force-app/main/default/objects/eCard_Bus_Shortage__x/fields/carrier__c.field-meta.xml
<CustomField>
    <fullName>carrier__c</fullName>
    <description>carrier</description>
    <externalDeveloperName>carrier</externalDeveloperName>
    <label>carrier</label>
    <length>254</length>
    <type>Text</type>
</CustomField>