force-app/main/default/objects/eCard_Bus_Shortage__x/fields/carrier_arrival_time__c.field-meta.xml
<CustomField>
    <fullName>carrier_arrival_time__c</fullName>
    <description>carrier_arrival_time</description>
    <externalDeveloperName>carrier_arrival_time</externalDeveloperName>
    <label>carrier_arrival_time</label>
    <length>254</length>
    <type>Text</type>
</CustomField>