force-app/main/default/objects/eCard_Bus_Shortage__x/fields/cause__c.field-meta.xml
<CustomField>
    <fullName>cause__c</fullName>
    <description>cause</description>
    <externalDeveloperName>cause</externalDeveloperName>
    <label>cause</label>
    <length>200</length>
    <type>Text</type>
</CustomField>