force-app/main/default/objects/eCard_Bus_Shortage__x/fields/custom_part_name__c.field-meta.xml
<CustomField>
    <fullName>custom_part_name__c</fullName>
    <description>custom_part_name</description>
    <externalDeveloperName>custom_part_name</externalDeveloperName>
    <label>custom_part_name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>