force-app/main/default/objects/eCard_Bus_Shortage__x/fields/eta__c.field-meta.xml
<CustomField>
    <fullName>eta__c</fullName>
    <description>eta</description>
    <externalDeveloperName>eta</externalDeveloperName>
    <label>eta</label>
    <type>DateTime</type>
</CustomField>