force-app/main/default/objects/eCard_Bus_Shortage__x/fields/is_long_term__c.field-meta.xml
<CustomField>
    <fullName>is_long_term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_long_term</description>
    <externalDeveloperName>is_long_term</externalDeveloperName>
    <label>is_long_term</label>
    <type>Checkbox</type>
</CustomField>