force-app/main/default/objects/eCard_Bus_Shortage__x/fields/last_modified_by__c.field-meta.xml
<CustomField>
    <fullName>last_modified_by__c</fullName>
    <description>last_modified_by</description>
    <externalDeveloperName>last_modified_by</externalDeveloperName>
    <label>last_modified_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>