force-app/main/default/objects/eCard_Bus_Shortage__x/fields/last_modified_date__c.field-meta.xml
<CustomField>
    <fullName>last_modified_date__c</fullName>
    <description>last_modified_date</description>
    <externalDeveloperName>last_modified_date</externalDeveloperName>
    <label>last_modified_date</label>
    <type>DateTime</type>
</CustomField>