force-app/main/default/objects/eCard_Bus_Shortage__x/fields/part_number__c.field-meta.xml
<CustomField>
    <fullName>part_number__c</fullName>
    <description>part_number</description>
    <externalDeveloperName>part_number</externalDeveloperName>
    <label>part_number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>