force-app/main/default/objects/eCard_Bus_Shortage__x/fields/planner_code__c.field-meta.xml
<CustomField>
    <fullName>planner_code__c</fullName>
    <description>planner_code</description>
    <externalDeveloperName>planner_code</externalDeveloperName>
    <label>planner_code</label>
    <length>254</length>
    <type>Text</type>
</CustomField>