force-app/main/default/objects/eCard_Bus_Shortage__x/fields/po_number__c.field-meta.xml
<CustomField>
    <fullName>po_number__c</fullName>
    <description>po_number</description>
    <externalDeveloperName>po_number</externalDeveloperName>
    <label>po_number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>