force-app/main/default/objects/eCard_Bus_Shortage__x/fields/product_code__c.field-meta.xml
<CustomField>
    <fullName>product_code__c</fullName>
    <description>product_code</description>
    <externalDeveloperName>product_code</externalDeveloperName>
    <label>product_code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>