force-app/main/default/objects/eCard_Bus_Shortage__x/fields/remarks__c.field-meta.xml
<CustomField>
    <fullName>remarks__c</fullName>
    <description>remarks</description>
    <externalDeveloperName>remarks</externalDeveloperName>
    <label>remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>