force-app/main/default/objects/eCard_Bus_Shortage__x/fields/resolved_by__c.field-meta.xml
<CustomField>
    <fullName>resolved_by__c</fullName>
    <description>resolved_by</description>
    <externalDeveloperName>resolved_by</externalDeveloperName>
    <label>resolved_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>