force-app/main/default/objects/eCard_Bus_Shortage__x/fields/resolved_date__c.field-meta.xml
<CustomField>
    <fullName>resolved_date__c</fullName>
    <description>resolved_date</description>
    <externalDeveloperName>resolved_date</externalDeveloperName>
    <label>resolved_date</label>
    <type>DateTime</type>
</CustomField>