force-app/main/default/objects/eCard_Bus_Shortage__x/fields/tracking_number__c.field-meta.xml
<CustomField>
    <fullName>tracking_number__c</fullName>
    <description>tracking_number</description>
    <externalDeveloperName>tracking_number</externalDeveloperName>
    <label>tracking_number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>