force-app/main/default/objects/eCard_Bus_Shortage__x/fields/vendor_number__c.field-meta.xml
<CustomField>
    <fullName>vendor_number__c</fullName>
    <description>vendor_number</description>
    <externalDeveloperName>vendor_number</externalDeveloperName>
    <label>vendor_number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>